# can_gateway

./: CMakeLists.txt  README.md  README_SIMPLE.md  package.xml
config/: can_gateway.service
include/can_gateway/: can_gateway_node.hpp
launch/: gateway.launch.py
scripts/: lifecycle_manager.py
src/: can_gateway_node.cpp  main.cpp
