<?xml version="1.0"?>
<package format="3">
  <name>can_gateway</name>
  <version>0.0.1</version>
  <description>C++ ROS 2 node that bridges SocketCAN frames to ROS2 topics and vice-versa.</description>
  <maintainer email="no@email.com">David Ribeiro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>can_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>